--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="#hero">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li><a href="#video">Video</a></li>
+      <li><a href="#video-profile">Video</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
 
