--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
       </div>
 
-      <button id="more-btn">More About Me</button>
+      <button id="more-btn"><a href="#about">About Me</a></button>
     </div>
 
     <!-- Right Content -->
